# logrotate

./: .gitattributes  .gitignore  .shellcheckrc  .travis.yml  CHANGES  CONTRIBUTING.md  ChangeLog.md  INSTALL  Makefile  Makefile.am  Makefile.legacy  README.HPUX  README.Solaris  README.md  SECURITY.md  autogen.sh  basenames.c  common.c  config.c  config.c.in  config.h  configure.ac  log.c  log.h  logrotate.8  logrotate.8.in  logrotate.c  logrotate.c.in  logrotate.h  logrotate.spec  logrotate.spec.in  queue.h  trustdir.c  trustdir.h  upload-release.sh
.github/: dependabot.yml
.github/workflows/: build-ci.yml  ci.yml  codeql-analysis.yml  differential-shellcheck.yml
build-aux/: git-version-gen
examples/: btmp  logrotate-default  logrotate.conf  logrotate.cron  logrotate.service  logrotate.timer  wtmp
tags/0-1/: logrotate.c
tags/2-0/: config.c  logrotate.8  logrotate.c
tags/2-0-1/: Makefile  logrotate.8  logrotate.c
tags/2-0-2/: Makefile  logrotate.c
tags/2-1/: logrotate.h
tags/2-2/: config.c  logrotate.c
tags/2-3/: logrotate.h
tags/r2-4/: CHANGES  Makefile  basenames.h  config.c  logrotate.8
tags/r2-5/: Makefile  log.c  logrotate.spec
tags/r2-6/: Makefile  logrotate.c  logrotate.spec
tags/r2-7/examples/: logrotate-default
tags/r2-8/: ChangeLog  config.c  logrotate.8
tags/r2-9/: config.c  logrotate.c  logrotate.spec
tags/r3-0/: logrotate.spec
tags/r3-1/: CHANGES  basenames.c  logrotate.8
tags/r3-2/: logrotate.c
tags/r3-3/: logrotate.h  logrotate.spec
tags/r3-3-2/: logrotate.8  logrotate.c  logrotate.spec
tags/r3-4/: config.c  logrotate.8  logrotate.h  logrotate.spec
tags/r3-4/examples/: logrotate-default
tags/r3-5/: .cvsignore  CHANGES  config.c  logrotate.c
tags/r3-5-2/: CHANGES  log.h  logrotate.spec
tags/r3-5-3/: logrotate.spec
tags/r3-5-3/test/: test-config.4.in
tags/r3-5-4/: log.c  logrotate.c
tags/r3-5-4/test/: test-config.1.in
tags/r3-5-5/test/: test-config.3.in
tags/r3-5-6/examples/: logrotate-default
tags/r3-5-8/: logrotate.c  logrotate.spec
tags/r3-5-9/: logrotate.spec
tags/r3-5-9/test/: test-config.5.in
tags/r3-6/: CHANGES  config.c  logrotate.spec
tags/r3-6-10/: Makefile  logrotate.spec
tags/r3-6-2/: Makefile  logrotate.8  logrotate.c  logrotate.spec
tags/r3-6-3/: config.h
tags/r3-6-4/: README.HPUX  config.c  logrotate.spec
tags/r3-6-4/examples/: logrotate.cron
tags/r3-6-5/: config.h  logrotate.8
tags/r3-6-6/: Makefile  logrotate.spec
tags/r3-6-7/: config.c  logrotate.c
tags/r3-6-8/: config.c  logrotate.c
tags/r3-6-8/test/: test-config.9.in
tags/r3-6-9/: logrotate-selinux.patch
tags/r3-6-9/test/: test-config.3.in
tags/r3-7/: config.c  config.h  logrotate.c  logrotate.spec
tags/r3-7-1/: CHANGES  log.h  logrotate.8  logrotate.c  logrotate.h
tags/r3-7-1/examples/: logrotate.cron
tags/r3-7-1/test/: test-config.13.in
tags/r3-7-2/: config.c  logrotate.8  logrotate.c
tags/r3-7-3/: config.c  logrotate.8  logrotate.c  logrotate.h  logrotate.spec
tags/r3-7-3/test/: test-config.8.in
tags/r3-7-4/: config.c  logrotate.8  logrotate.c
tags/r3-7-5/: config.c  logrotate.c
tags/r3-7-5/test/: test-config.4.in
tags/r3-7-6/: config.c  logrotate.h
tags/r3-7-7/: CHANGES  config.c  logrotate.spec
tags/r3-7-7/test/: mailer
tags/r3-7-8/: Makefile  logrotate.8  logrotate.c  logrotate.spec
tags/r3-7-8/test/: test
tags/r3-7-9/: config.c  config.h
tags/r3-7-9/examples/: logrotate-default  logrotate.cron
tags/r3-8-0/: CHANGES  config.h  logrotate.c  logrotate.spec
tags/r3-8-0/test/: test-config.12.in
tags/r3-8-1/: config.c  config.h  logrotate.c
tags/r3-8-1/test/: test-config.15.in
tags/r3-8-3/: CHANGES  Makefile  config.c  logrotate.8  logrotate.c  logrotate.spec
tags/r3-8-3/test/: test  test-config.18.in  test-config.24.in
tags/r3-8-4/: Makefile  logrotate.8
tags/r3-8-4/test/: test-config.20.in  test-config.22.in  test-config.25.in  test-config.39.in  test-config.40.in  test-config.41.in  test-config.44.in
tags/r3-8-5/: CHANGES  logrotate.c  logrotate.spec
tags/r3-8-5/test/: test  test-config.16.in
tags/r3-8-6/: README.Solaris  logrotate.8  logrotate.conf.5
tags/r3-8-6/test/: test-config.44.in  test-config.45.in  test-config.49.in
tags/r3-8-7/: INSTALL  config.c  logrotate.spec
tags/r3-8-7/test/: compress  test-config.14.in  test-config.35.in  test-config.36.in
tags/r3-8-8/: Makefile.am  log.h  logrotate.h
tags/r3-8-8/test/: test-config.10.in  test-config.26.in  test-config.27.in
tags/r3-8-9/: CHANGES  Makefile  configure.ac  logrotate.c
tags/r3-8-9/test/: test-config.11.in  test-config.13.in  test-config.19.in  test-config.21.in  test-config.32.in  test-config.37.in  test-config.6.in
tags/r3-9-0/: CHANGES  Makefile  logrotate.c
tags/r3-9-0/test/: test  test-config.48.in  test-config.53.in  test-config.61.in
tags/r3-9-1/: CHANGES  INSTALL  log.c  log.h  logrotate.c  logrotate.spec
tags/r3-9-1/test/: Makefile.am  test  test-config.29.in  test-config.42.in  test-config.50.in  test-config.52.in  test-config.57.in  test-config.58.in
tags/r3.8.2/: config.c  logrotate.8
test/: Makefile.am  compress  compress-error  leak_san_supress.txt  mailer  test  test-0001.sh  test-0002.sh  test-0003.sh  test-0004.sh  test-0005.sh  test-0006.sh  test-0007.sh  test-0008.sh  test-0009.sh  test-0010.sh  test-0011.sh  test-0012.sh  test-0013.sh  test-0014.sh  test-0015.sh  test-0016.sh  test-0017.sh  test-0018.sh  test-0019.sh  test-0020.sh  test-0021.sh  test-0022.sh  test-0023.sh  test-0024.sh  test-0025.sh  test-0026.sh  test-0027.sh  test-0028.sh  test-0029.sh  test-0030.sh  test-0031.sh  test-0032.sh  test-0033.sh  test-0034.sh  (+157 more)
trunk/: CHANGES  Makefile  basenames.c  basenames.h  config.c  config.h  configure.ac  log.c  log.h  logrotate.8  logrotate.c  logrotate.h  logrotate.spec
trunk/examples/: logrotate-default
trunk/test/: compress-error  test  test-config.1.in  test-config.2.in  test-config.28.in  test-config.31.in  test-config.42.in  test-config.5.in  test-config.51.in  test-config.55.in  test-config.60.in
(+2 files in other folders)
